--- a/etherCAT.interface.csproj
+++ b/etherCAT.interface.csproj
@@ -1,17 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>etherCAT.interface</RootNamespace>
     <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="ctrlX-DataLayer" Version="2.5.0" />
-    <PackageReference Include="ctrlX-DataLayer.Flatbuffers" Version="1.16.0" />
-    <PackageReference Include="FlatBuffers.Core" Version="1.12.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="ctrlX-DataLayer" Version="2.5.0"/>
+    <PackageReference Include="ctrlX-DataLayer.Flatbuffers" Version="1.16.0"/>
+    <PackageReference Include="FlatBuffers.Core" Version="1.12.0"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0"/>
+    <PackageReference Include="WebDav.Client" Version="2.8.0"/>
   </ItemGroup>
-
 </Project>
