--- a/docker-compose/Dockerfile_ui
+++ b/docker-compose/Dockerfile_ui
@@ -5,7 +5,7 @@ FROM ubuntu:20.04
 WORKDIR /app
 
 # Copy source code to image
-COPY ctrlx-datalayer-mqtt-interface/ .
+COPY --from=project /ctrlx-datalayer-mqtt-ui/ .
 
 # Install required packages
 RUN echo 'Installing requirements in image' &&\
