--- a/docker-compose/Dockerfile_ui
+++ b/docker-compose/Dockerfile_ui
@@ -10,16 +10,11 @@ COPY --from=project /ctrlx-datalayer-mqtt-ui/ .
 # Install required packages
 RUN echo 'Installing requirements in image' &&\
     apt-get update &&\
-    apt-get install -y libzmq5 \
-    pip \
-    mosquitto-clients \
-    /app/ctrlx-datalayer-1.9.1.deb &&\
+    apt-get install -y pip &&\
     pip3 install -r /app/requirements.txt &&\
-    chmod +x /app/mosquitto_publish.sh &&\
-    rm -rf /var/lib/apt/lists/* &&\
-    rm /app/ctrlx-datalayer-1.9.1.deb
+    rm -rf /var/lib/apt/lists/*
 
-LABEL description="ctrlX Datalayer MQTT Interface"
+LABEL description="ctrlX Datalayer MQTT UI"
 LABEL maintainer="S-Gilk <https://github.com/S-Gilk>"
 
 # Run the application
