--- a/docker-compose/Dockerfile_interface
+++ b/docker-compose/Dockerfile_interface
@@ -11,13 +11,16 @@ COPY --from=project /ctrlx-datalayer-mqtt-interface/ .
 RUN echo 'Installing requirements in image' &&\
     apt-get update &&\
     apt-get install -y libzmq5 \
-    pip \
+    python3-pip \
     mosquitto-clients \
     /app/ctrlx-datalayer-1.9.1.deb &&\
     pip3 install -r /app/requirements.txt &&\
     chmod +x /app/mosquitto_publish.sh &&\
     rm -rf /var/lib/apt/lists/* &&\
-    rm /app/ctrlx-datalayer-1.9.1.deb
+    rm /app/ctrlx-datalayer-1.9.1.deb &&\
+    apt-get clean &&\
+    apt-get autoclean &&\
+    apt-get autoremove
 
 LABEL description="ctrlX Datalayer MQTT Interface"
 LABEL maintainer="S-Gilk <https://github.com/S-Gilk>"
