--- a/docker-compose/Dockerfile_ui
+++ b/docker-compose/Dockerfile_ui
@@ -1,5 +1,5 @@
 # Specify the parent image from which we build
-FROM ubuntu:20.04
+FROM python:3.12-rc-slim-buster
 
 # Set the working directory
 WORKDIR /app
@@ -9,10 +9,11 @@ COPY --from=project /ctrlx-datalayer-mqtt-ui/ .
 
 # Install required packages
 RUN echo 'Installing requirements in image' &&\
-    apt-get update &&\
-    apt-get install -y pip &&\
     pip3 install -r /app/requirements.txt &&\
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* &&\
+    apt-get clean &&\
+    apt-get autoclean &&\
+    apt-get autoremove
 
 LABEL description="ctrlX Datalayer MQTT UI"
 LABEL maintainer="S-Gilk <https://github.com/S-Gilk>"
