--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,7 +8,7 @@ base: core20
 summary: Containerized MQTT broker with automated topic generation from datalayer data
 description: |
     This snap contains the docker images 'eclipsemosquitto:latest' and 'ctrlx-datalayer-mqtt-interface:latest'
-    The files 'image.tar', 'image2.tar', 'docker-compose.yml' and 'docker-compose.env'
+    The files 'image.tar', 'image2.tar', 'image3.tar', 'docker-compose.yml' and 'docker-compose.env'
     are provided via content-interface 'docker-compose'.
     The content-interface 'docker-volumes' provides the container access to a directory inside this snap with write permissions.
 grade: stable
