Revert "Initial commit"
This reverts commit fa429146cca8b16c36960ed66db4e34730cb7fd7.

--- a/docker-compose/docker-compose.env
+++ b/docker-compose/docker-compose.env
@@ -1,2 +1,6 @@
-IMAGE_NAME=ctrlx-secomea
+IMAGE_NAME=eclipse-mosquitto
 IMAGE_TAG=latest
+IMAGE_NAME2=ctrlx-datalayer-mqtt-interface
+IMAGE_TAG2=latest
+IMAGE_NAME3=ctrlx-datalayer-mqtt-ui
+IMAGE_TAG3=latest
